# Lyra

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-commit.ps1
.github/workflows/: ci.yml
compiler/: Cargo.toml
compiler/src/: driver.rs  lib.rs
compiler/src/ast/: mod.rs
compiler/src/lexer/: mod.rs
compiler/src/parser/: mod.rs
compiler/tests/: lexer.rs  parser.rs  smoke.rs
crates/lyra-driver/: Cargo.toml
crates/lyra-driver/src/: lib.rs
crates/lyra-meta/: Cargo.toml
crates/lyra-meta/src/: diagnostic.rs  lib.rs  span.rs  version.rs
examples/: bad.ly  hello_world.ly
scripts/: check.ps1
tools/formatter/: Cargo.toml
tools/linter/: Cargo.toml
tools/lyra-cli/: Cargo.toml
tools/lyra-cli/src/: main.rs
tools/lyrac/: Cargo.toml
tools/lyrac/src/: main.rs
