[workspace]
resolver = "2"
members = [
  "crates/lyra-meta",
  "crates/lyra-driver",
  "compiler",
  "tools/lyrac",
  "tools/lyra-cli",
  "tools/formatter",
  "tools/linter"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
